--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ h3{
 }
 
 body{
-    background-color: maroon;
+    background-color:aqua;
 }
 .poppins-thin {
     font-family: "Poppins", sans-serif;
