--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,24 @@
-
+h1,
+h2,
+h3,
+h4{
+  font-family:"Poppins", sans-serif;
+}
 
 h1{
     font-size: 48px;
-    
-}
+    }
 
 h3{
     font-size: 32px;
 }
-
-
+p{
+  font-family:"Playfair Display", serif;
+}
+.img-display{
+  max-width: 400px;
+  
+}
 .poppins-thin {
     font-family: "Poppins", sans-serif;
     font-weight: 100;
@@ -117,13 +126,12 @@ h3{
     font-weight: 900;
     font-style: italic;
   }
-
   // <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 400 to 900
-
-.playfair-display-<uniquifier> {
-  font-family: "Playfair Display", serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-}
+  // <weight>: Use a value from 400 to 900
+  
+  .playfair-display-content {
+    font-family:"Playfair Display", system-ui;
+    font-optical-sizing:auto;
+    font-weight: 400;
+    font-style: normal;
+  }
