--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,14 @@ p{
 }
 .img-display{
   max-width: 400px;
+ 
+  
+}
+.ourStory-img1{
+  width: 100%;
+  height:400px;
+  margin-top:20px;
+  padding:10px;
   
 }
 .poppins-thin {
